# gamma-locker

./: .git_signing_probe  .gitignore  README.md  app.py  fix_scraper.py  fix_scraper_text.py  fix_scraper_text2.py  fix_scraper_text3.py  fix_scraper_text4.py  ingame_stats_overrides.json  parse2.py  patch_loop.py  patch_rules.py  paths_config.json  paths_config.py  pyproject.toml  release.ps1  release.sh  save_reader.py  scraper.py  start_gamma_locker.bat  start_gamma_locker.ps1  start_gamma_locker.sh  test_coverage.py  test_name.py  test_parse.py  test_xml_regex.py
.github/workflows/: release.yml
loadout_lab_data/: tex_map.json  weapons_stats.csv
tests/: spy_save_l.py  test_drafting.py
